@@ -46,11 +46,6 @@ predict( const IndexRange & r1, const IndexRange & r2 )
 		throw std::runtime_error("PredictorMfeEns2dHeuristicSeedExtension : the enumeration of non-overlapping suboptimal interactions is not supported in this prediction mode");
 	}
 
-	// no-LP setup check
-	if (outConstraint.noLP) {
-		INTARNA_NOT_IMPLEMENTED("PredictorMfeEns2dHeuristicSeedExtension : prediction without lonely base pairs is not implemented yet");
-	}
-
 #if INTARNA_IN_DEBUG_MODE
 	// check indices
 	if (!(r1.isAscending() && r2.isAscending()) )
@@ -133,6 +128,11 @@ fillHybridZ_right( const size_t sj1, const size_t sj2
 	// global vars to avoid reallocation
 	size_t j1,j2,k1,k2;
 
+	// determine whether or not lonely base pairs are allowed or if we have to
+	// ensure a stacking to the right of the left boundary (i1,i2)
+	const size_t noLpShift = outConstraint.noLP ? 1 : 0;
+	Z_type iStackZ = Z_type(1);
+
 	// current minimal value
 	const Z_type seedZ = energy.getBoltzmannWeight(seedHandler.getSeedE(si1, si2));
 	const Z_type initZ = energy.getBoltzmannWeight(energy.getE_init());
@@ -150,17 +150,29 @@ fillHybridZ_right( const size_t sj1, const size_t sj2
 			// check if not only seed
 			if( sj1<j1 && sj2<j2 && energy.areComplementary(j1,j2) ) {
 
+				// left-stacking of j if no-LP
+				if (outConstraint.noLP) {
+					// skip if no stacking possible
+					if (!energy.areComplementary(j1-noLpShift,j2-noLpShift)) {
+						continue;
+					}
+					// get stacking energy to avoid recomputation in recursion below
+					iStackZ = energy.getBoltzmannWeight(energy.getE_interLeft(j1-noLpShift,j1,j2-noLpShift,j2));
+				}
+
 				// check all combinations of decompositions into (i1,i2)..(k1,k2)-(j1,j2)
-				for (k1=j1; k1-- > sj1; ) {
+				for (k1=j1-noLpShift; k1-- > sj1; ) {
 					// ensure maximal loop length
-					if (j1-k1 > energy.getMaxInternalLoopSize1()+1) break;
-					for (k2=j2; k2-- > sj2; ) {
+					if (j1-noLpShift-k1 > energy.getMaxInternalLoopSize1()+1) break;
+					for (k2=j2-noLpShift; k2-- > sj2; ) {
 						// ensure maximal loop length
-						if (j2-k2 > energy.getMaxInternalLoopSize2()+1) break;
+						if (j2-noLpShift-k2 > energy.getMaxInternalLoopSize2()+1) break;
 						// check if (k1,k2) is valid left boundary
 						if ( ! Z_equal(hybridZ_right(k1-sj1,k2-sj2), 0.0) ) {
 							// store value
-							curZ += energy.getBoltzmannWeight(energy.getE_interLeft(k1,j1,k2,j2)) * hybridZ_right(k1-sj1,k2-sj2);
+							curZ += (hybridZ_right(k1-sj1,k2-sj2)
+									* energy.getBoltzmannWeight(energy.getE_interLeft(k1,j1-noLpShift,k2,j2-noLpShift))
+									* iStackZ );
 						}
 					}
 				}
@@ -204,6 +216,11 @@ fillHybridZ_left( const size_t si1, const size_t si2 )
 	const Z_type initZ = energy.getBoltzmannWeight(energy.getE_init());
 	const Z_type rightOptZ = hybridZ_right(j1opt-sj1,j2opt-sj2);
 
+	// determine whether or not lonely base pairs are allowed or if we have to
+	// ensure a stacking to the right of the left boundary (i1,i2)
+	const size_t noLpShift = outConstraint.noLP ? 1 : 0;
+	Z_type iStackZ = Z_type(0);
+
 	// iterate over all window starts i1 (seq1) and i2 (seq2)
 	for (i1=si1; si1-i1 < hybridZ_left.size1(); i1-- ) {
 		for (i2=si2; si2-i2 < hybridZ_left.size2(); i2-- ) {
@@ -217,16 +234,28 @@ fillHybridZ_left( const size_t si1, const size_t si2 )
 			// check if complementary (use global sequence indexing)
 			if( i1<si1 && i2<si2 && energy.areComplementary(i1,i2) ) {
 
+				// left-stacking of j if no-LP
+				if (outConstraint.noLP) {
+					// skip if no stacking possible
+					if (!energy.areComplementary(i1+noLpShift,i2+noLpShift)) {
+						continue;
+					}
+					// get stacking energy to avoid recomputation in recursion below
+					iStackZ = energy.getBoltzmannWeight(energy.getE_interLeft(i1,i1+noLpShift,i2,i2+noLpShift));
+				}
+
 				// check all combinations of decompositions into (i1,i2)..(k1,k2)-(j1,j2)
-				for (k1=i1; k1++ < si1; ) {
+				for (k1=i1+noLpShift; k1++ < si1; ) {
 					// ensure maximal loop length
-					if (k1-i1 > energy.getMaxInternalLoopSize1()+1) break;
-					for (k2=i2; k2++ < si2; ) {
+					if (k1-i1-noLpShift > energy.getMaxInternalLoopSize1()+1) break;
+					for (k2=i2+noLpShift; k2++ < si2; ) {
 						// ensure maximal loop length
-						if (k2-i2 > energy.getMaxInternalLoopSize2()+1) break;
+						if (k2-i2-noLpShift > energy.getMaxInternalLoopSize2()+1) break;
 						// check if (k1,k2) are valid left boundary
 						if ( ! Z_equal(hybridZ_left(si1-k1,si2-k2), 0.0) ) {
-							curZ += energy.getBoltzmannWeight(energy.getE_interLeft(i1,k1,i2,k2)) * hybridZ_left(si1-k1,si2-k2);
+							curZ += (iStackZ
+									* energy.getBoltzmannWeight(energy.getE_interLeft(i1+noLpShift,k1,i2+noLpShift,k2))
+									* hybridZ_left(si1-k1,si2-k2) );
 						}
 					} // k2
 				} // k1
