@@ -1,0 +1,13 @@
+model=X
+mode=H
+seedBP=3
+energy=B 
+tAcc=N
+qAcc=N
+target=CCAACCCACC
+query=GGGG
+outMode=C
+outNumber=10
+outOverlap=B
+outDeltaE=0
+outNoLP=true
